@@ -3,6 +3,13 @@ Duchamp version 1.1.8 (2009/??/??)
 
 Improvements:
 
+* The FDR method involves calculating how many pixels are
+  correlated. This previously involved multiplying the beam area by 2,
+  implying that 2 neighbouring channels were correlated. This factor
+  is now a user-selectable parameter, so that if you know how many
+  spectral channels should be correlated, you can set the parameter
+  FDRnumCorChan and the FDR calculation will be done correctly.
+
 * Screen output now has more information on the growing threshold when
   the cube statistics are printed.
 
